# vex-simulation

./: .gitignore  Cargo.toml  README.md  log.out  rust-toolchain.toml
docs/: tutorial-physics-sim.md
examples/: display.rs  distance.rs  motor.rs  touch.rs
examples/common/: mod.rs
ipc/: Cargo.toml
ipc/examples/: oscillator.rs  simple-motor.rs
ipc/src/: cmd.rs  display.rs  error.rs  lib.rs  snapshot.rs
simulator/: Cargo.toml
simulator/assets/mac/: add-margin.sh
simulator/assets/mac/v5.icon/: icon.json
simulator/src/: config.rs  device.rs  display.rs  ipc.rs  lib.rs  macos.rs
simulator/src/canvas/: img.rs  mod.rs
simulator/src/canvas/font/: mod.rs
simulator/src/canvas/img/: mod.rs
simulator/src/frontend/: ipc.rs
simulator/src/sdk/: abs_enc.rs  adi.rs  ai_vision.rs  arm.rs  battery.rs  competition.rs  controller.rs  device.rs  display.rs  distance.rs  file.rs  generic_radio.rs  generic_serial.rs  gps.rs  imu.rs  led.rs  light_tower.rs  magnet.rs  mod.rs  motor.rs  optical.rs  pneumatic.rs  range.rs  serial.rs  system.rs  task.rs  touch.rs  vision.rs
viewer/: Cargo.toml
viewer/src/: macos.rs  main.rs
