[package]
name = "examples"
version = "0.1.0"
publish = false
edition = "2024"

[workspace]
members = ["simulator"]

[dev-dependencies]
embedded-graphics = { version = "0.8.2", default-features = false }
tinybmp = "0.7.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vex-sdk = "0.28.0"

[target.'cfg(target_os = "vexos")'.dev-dependencies]
vexide = { version = "0.8.0", features = ["full", "default-sdk"] }

[target.'cfg(not(target_os = "vexos"))'.dev-dependencies]
vexide = { version = "0.8.0", features = ["startup", "macros"] }
vex-sdk-desktop = { path = "./simulator" }

[patch.crates-io]
# Rust 1.94 support (std doesn't build on 1.95 nightly for now)
vexide = { git = 'https://github.com/vexide/vexide.git', branch = "feat/rust-1.95" }
