[package]
name = "vex-sdk-desktop"
version = "0.1.0"
edition = "2024"

[features]
default = []
windowed = ["dep:softbuffer", "dep:winit", "dep:dispatch2", "dep:objc2", "dep:objc2-foundation", "dep:objc2-app-kit", "dep:objc2-core-graphics"]

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["must_cast"] }
fast_image_resize = { version = "6.0.0", features = ["bytemuck"] }
line_drawing = "1.0.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
parking_lot = "0.12.5"
softbuffer = { version = "0.4.8", optional = true }
tracing = "0.1.44"
vex-sdk = "0.28.0"
winit = { version = "0.30.12", optional = true }
font-kit = { version = "0.14.3", default-features = false, features = [
    "loader-freetype",
], git = "https://github.com/servo/font-kit" }
pathfinder_geometry = "0.5.1"
freetype-sys = { version = "0.23.0", features = ["bundled"] }
thiserror = "2.0.18"
png = "0.18.1"
iceoryx2 = "0.8.1"
derive_more = { version = "2.1.1", features = ["as_ref", "from", "try_into"] }
roboscope-ipc = { version = "0.1.0", path = "../ipc", features = [] }
cfg-if = "1.0.4"
static_assertions = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = { version = "0.3.1", optional = true }
objc2 = { version = "0.6.4", optional = true }
objc2-foundation = { version = "0.3.2", features = ["NSThread"], optional = true }
objc2-app-kit = { version = "0.3.2", features = [
    "objc2-core-graphics",
    "NSImage",
    "NSView",
], optional = true }
objc2-core-graphics = { version = "0.3.2", features = [
    "CGDataProvider",
    "CGColorSpace",
], optional = true }
