[package]
name = "vex-sdk-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["must_cast"] }
fast_image_resize = { version = "6.0.0", features = ["bytemuck"] }
line_drawing = "1.0.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
parking_lot = "0.12.5"
tracing = "0.1.44"
vex-sdk = "0.28.0"
font-kit = { version = "0.14.3", default-features = false, features = [
    "loader-freetype",
], git = "https://github.com/servo/font-kit" }
pathfinder_geometry = "0.5.1"
freetype-sys = { version = "0.23.0", features = ["bundled"] }
thiserror = "2.0.18"
png = "0.18.1"
iceoryx2 = "0.8.1"
derive_more = { version = "2.1.1", features = ["as_ref", "from", "try_into"] }
roboscope-ipc = { version = "0.1.0", path = "../ipc", features = [] }
cfg-if = "1.0.4"
static_assertions = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
itertools = "0.14.0"
