[package]
name = "roboscope-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["must_cast"] }
ctrlc = { version = "3.5.2" }
fast_image_resize = { version = "6.0.0", features = ["bytemuck"] }
iceoryx2 = "0.8.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
roboscope-ipc = { version = "0.1.0", path = "../ipc" }
softbuffer = "0.4.8"
tracing = "0.1.44"
winit = "0.30.13"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSThread"] }
objc2-app-kit = { version = "0.3.2", features = [
    "objc2-core-graphics",
    "NSImage",
    "NSView",
] }
objc2-core-graphics = { version = "0.3.2", features = [
    "CGDataProvider",
    "CGColorSpace",
] }
